--- a/SpeedTweetLite/Base.lproj/Main_iPhone.storyboard
+++ b/SpeedTweetLite/Base.lproj/Main_iPhone.storyboard
@@ -31,7 +31,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </tableViewCellContentView>
                                                 <connections>
-                                                    <segue destination="eH1-pX-5hD" kind="push" id="GJ1-DY-Ytf"/>
+                                                    <segue destination="eH1-pX-5hD" kind="push" identifier="tweetDescription" id="GJ1-DY-Ytf"/>
                                                 </connections>
                                             </tableViewCell>
                                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="79P-EH-3mT">
@@ -62,7 +62,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Speed Tweet Lite" id="nVb-RO-ruq">
-                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="ewo-HM-PPV"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="ewo-HM-PPV">
+                            <connections>
+                                <action selector="refresh:" destination="HA0-S7-Ht9" id="MyZ-9s-17X"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="BuQ-0a-K8S">
                             <connections>
                                 <action selector="newTweet:" destination="HA0-S7-Ht9" id="K0d-Tu-Z5r"/>
